content left alignment fix

--- a/layouts/content-sidebar.css
+++ b/layouts/content-sidebar.css
@@ -22,7 +22,6 @@
 .paging-navigation {
 	position: relative;
 	max-width: 780px;
-	padding: 0 1em;
 	margin: 0 auto;
 }
 
